[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Player/RayVisualizer.gd" type="Script" id=2]
[ext_resource path="res://sounds/Jump-benjaminno.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/Sword_Slash-benjaminno.wav" type="AudioStream" id=4]
[ext_resource path="res://graphics/new_graphics/player.png" type="Texture" id=5]
[ext_resource path="res://src/Util/HitStop.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Util/HitShake.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Player/SwipeDetector.gd" type="Script" id=8]
[ext_resource path="res://sounds/Bump.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/Click3.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/Click-benjaminno.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/Click2.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/Gun.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/Trampoline.wav" type="AudioStream" id=14]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 1547, 1356 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1547, 0, 1547, 1356 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3094, 0, 1547, 1356 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "stun",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 19.0263

[node name="Player" type="KinematicBody2D"]
position = Vector2( 52, 343 )
collision_layer = 2
collision_mask = 41
collision/safe_margin = 0.001
script = ExtResource( 1 )
speed = 200.0
jump_vel = -600.0
accel = 20.0
tongue_length = 350.0
tongue_extend_speed = 1.0
mood_add = 0.3
stomp_speed = 1600.0
stomp_launch_speed_modifier = 0.1
grapple_cooldown = 0.2
taste_buds_path = NodePath("../UILayer/TasteBuds")
jump_sfx = ExtResource( 3 )
tongue_sfx = ExtResource( 4 )
lick_sfx = ExtResource( 14 )
bump_sfx = ExtResource( 9 )
pickup_sfx = [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ) ]
stomp_sfx = ExtResource( 13 )
bubble_slowdown = 0.6
food_zip_speed = 2000.0
bubble_launch_dropoff = 0.8

[node name="WallRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 0 )

[node name="TongueRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 13, -21 )
collide_with_areas = true
script = ExtResource( 2 )
dash_size = 20.0
space_size = 10.0

[node name="FloorRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 1, 46 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 0.03, 0.03 )
frames = SubResource( 4 )

[node name="TonguePos" type="Node2D" parent="Sprite"]
position = Vector2( 0, 409.6 )

[node name="HitShake" parent="Sprite" instance=ExtResource( 7 )]
position = Vector2( 0, 136.533 )
scale = Vector2( 68.2668, 68.2668 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -1.0
bus = "Sfx"

[node name="HitStop" parent="." instance=ExtResource( 6 )]

[node name="GrappleCooldown" type="Timer" parent="."]
one_shot = true

[node name="SwipeDetector" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="SwipeTimer" type="Timer" parent="SwipeDetector"]
one_shot = true

[connection signal="swiped" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped"]
[connection signal="timeout" from="SwipeDetector/SwipeTimer" to="SwipeDetector" method="_on_SwipeTimer_timeout"]
